W.ednesday T.hurday F.riday border!! XD

--- a/first-project/index.html
+++ b/first-project/index.html
@@ -10,34 +10,37 @@
   <body>
     <section class="container">
       <div class="card">
-        <div>
+        <div class="compartment">
           <div class="img-holder">
-            <img src="/img-source/paper-plane.svg" />
+            <img src="/first-project/img-source/paper-plane.svg" />
           </div>
           <div class="txt-holder">
-            <p>PERSONAL</p>
-            <p>CUSTOM DOMAINS</p>
-            <p>SLEEPS AFTER 30 MINS OF INACTIVITY</p>
+            <p class="user-size">PERSONAL</p>
+            <p class="perk-1">CUSTOM DOMAINS</p>
+            <p class="perk-2">SLEEPS AFTER 30 MINS OF INACTIVITY</p>
+            <h1>$0.00</h1>
           </div>
         </div>
-        <div>
+        <div class="compartment-2">
           <div class="img-holder">
-            <img src="/img-source/airplane.svg" />
+            <img src="/first-project/img-source/airplane.svg" />
           </div>
           <div class="txt-holder">
-            <p>SMALL TEAM</p>
-            <p>NEVER SLEEPS</p>
-            <p>MULTIPLE WORKER FOR MORE POWERFUL APPS</p>
+            <p class="user-size">SMALL TEAM</p>
+            <p class="perk-1">NEVER SLEEPS</p>
+            <p class="perk-2">MULTIPLE WORKER FOR MORE POWERFUL APPS</p>
+            <h1>$99.9</h1>
           </div>
         </div>
-        <div>
+        <div class="compartment">
           <div class="img-holder">
-            <img src="/img-source/rocket.svg" />
+            <img src="/first-project/img-source/rocket.svg" />
           </div>
           <div class="txt-holder">
-            <p>PERSONAL</p>
-            <p>CUSTOM DOMAINS</p>
-            <p>SLEEPS AFTER 30 MINS OF INACTIVITY</p>
+            <p class="user-size">ENTERPRISE</p>
+            <p class="perk-1">DEDICATED</p>
+            <p class="perk-2">SIMPLE HORIZONTAL SCALABILITY</p>
+            <h1>$659.9</h1>
           </div>
         </div>
       </div>
