practice one is done

--- a/first-project/index.html
+++ b/first-project/index.html
@@ -21,7 +21,7 @@
             <h1>$0.00</h1>
           </div>
         </div>
-        <div class="compartment-2">
+        <div class="compartment">
           <div class="img-holder">
             <img src="/first-project/img-source/airplane.svg" />
           </div>
@@ -29,7 +29,7 @@
             <p class="user-size">SMALL TEAM</p>
             <p class="perk-1">NEVER SLEEPS</p>
             <p class="perk-2">MULTIPLE WORKER FOR MORE POWERFUL APPS</p>
-            <h1>$99.9</h1>
+            <h1>$99.99</h1>
           </div>
         </div>
         <div class="compartment">
@@ -40,7 +40,7 @@
             <p class="user-size">ENTERPRISE</p>
             <p class="perk-1">DEDICATED</p>
             <p class="perk-2">SIMPLE HORIZONTAL SCALABILITY</p>
-            <h1>$659.9</h1>
+            <h1>$659.99</h1>
           </div>
         </div>
       </div>
