--- a/first-project/index.html
+++ b/first-project/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practice-1</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap");
+    </style>
   </head>
   <body>
     <section class="container">
